--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset is too big. The system could slow if the dataset is uploaded in the machine. Let's do the following things using pandas\n",
+    "Suppose, the dataset is too big. The system could slow if the dataset is uploaded in the machine. Let's do the following things using pandas\n",
     "\n",
     "1. Load & read specific rows\n",
     "2. Get to know about columns\n",
@@ -450,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's practice filteration of the data\n",
+    "Let's practice manipulation of the data\n",
     "\n",
     "1. Count how many superchargers are in each state, city\n",
     "2. max number of stalls in each city\n",
